--- a/README
+++ b/README
@@ -15,7 +15,18 @@ you can compile with "make" and install with "make install".
 Please send all bug reports by electronic mail to:
     liw@iki.fi
 
-liwc is free software.  You may copy it according to the
-GNU General Public License, version 2. A copy of the license
-is not included, but you can get one from most FTP sites that
-have GNU software, for example, prep.ai.mit.edu.
+Part of liwc, a collection of tools for manipulating C source code
+Copyright (c) 1994-2003 Lars Wirzenius
+
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License, version 2, as
+published by the Free Software Foundation.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along
+with this program; if not, write to the Free Software Foundation, Inc.,
+51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
