--- a/README
+++ b/README
@@ -1,6 +1,7 @@
-This is liwc, version 1.8.
+This is liwc, version 1.21.
 
-liwc is a collection of programs to manipulate C source code.
+liwc is a collection of programs to manipulate C source code,
+originally written by Lars "liw" Wirzenius.
 
 ccmtcnvt converts C++ comments (// foo) to C comments (/* foo */).
 rmccmt removes C and C++ comments.
@@ -8,14 +9,28 @@ entrigraph converts single characters to trigraphs.
 untrigraph converts trigraphs to single characters.
 cstr prints string literals in C programs.
 
-You need my Publib library and a <unistd.h> that declares getopt
-to build. Once you have these (or hack the source to avoid them),
-you can compile with "make" and install with "make install".
+You need the Publib library (see http://code.google.com/p/publib/) and
+a <unistd.h> that declares getopt. Once you have these (or hack the
+source to avoid them), you can compile with "make" and install with
+"make install".
 
-Please send all bug reports by electronic mail to:
-    liw@iki.fi
+Please file bug reports in the issue tracker at
+  http://code.google.com/p/liwc/issues/list
+or alternatively by electronic mail to
+    antti-juhani@kaijanaho.fi
 
-Part of liwc, a collection of tools for manipulating C source code
+Development code is hosted in Git.  There's a code browser at
+  http://code.google.com/p/liwc/source/browse/
+and a local clone can be made by
+  git clone https://code.google.com/p/liwc/
+
+Releases will be posted at
+  http://code.google.com/p/liwc/downloads/list
+
+
+liwc is free software under the following copyright and license statement:
+
+Copyright (c) 2012 Antti-Juhani Kaijanaho
 Copyright (c) 1994-2003 Lars Wirzenius
 
 This program is free software; you can redistribute it and/or modify
